--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 									<p>"I am a Graphic Designer based in Abbottabad, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards. But that’s just a part of it. Design is my life. It’s my five-star spa. It’s my roller-coaster. It’s something I do before going to bed, and something I can’t wait to do in the mornings. Without it, my world would be black and white.”</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 9th October, 1998</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +92 3498903837</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> sheroznaveed22@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +92 3181495344</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> shehroznaveed111@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Haripur Pakistan</a></li>
 									</ul>
 									<ul class="list personal_social">
