--- a/index.html
+++ b/index.html
@@ -204,11 +204,12 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2000 to 2015</p>
+											<p>March 2017 to till(2021)</p>
 										</div>
 										<div class="media-body">
-											<h4>Islamia International Public School</h4>
-											<p>Matric<br />Haripur, Pakistan</p>
+											
+											<h4>Comsats University Islamabad,Abbottabad Campus</h4>
+												<p>BS Computer Science<br />Abbottabad, Pakistan</p>
 										</div>
 									</div>
 								</li>
@@ -228,57 +229,17 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-												<p>March 2017 to 2021</p>
+												<p>March 2000 to 2015</p>
 											</div>
 											<div class="media-body">
-												<h4>Comsats University Islamabad,Abbottabad Campus</h4>
-												<p>BS Computer Science<br />Abbottabad, Pakistan</p>
+												<h4>Islamia International Public School</h4>
+											<p>Matric<br />Haripur, Pakistan</p>
 										</div>
 									</div>
 								</li>
 							</ul>
 						</div>
 						
-						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-								<ul class="list">
-									<li>
-										<span></span>
-										<div class="media">
-											<div class="d-flex">
-												<p>March 2000 to 2015</p>
-											</div>
-											<div class="media-body">
-												<h4>Islamia International Public School</h4>
-												<p>Matric<br />Haripur, Pakistan</p>
-											</div>
-										</div>
-									</li>
-									<li>
-										<span></span>
-										<div class="media">
-											<div class="d-flex">
-													<p>March 2015 to 2017</p>
-												</div>
-												<div class="media-body">
-													<h4>Punjab Groups of Collegs</h4>
-													<p>FSC(Pre-Engienering)<br />Haripur, Pakistan</p>
-											</div>
-										</div>
-									</li>
-									<li>
-									<span></span>
-										<div class="media">
-											<div class="d-flex">
-													<p>March 2017 to 2021</p>
-												</div>
-												<div class="media-body">
-													<h4>Comsats University Islamabad,Abbottabad Campus</h4>
-													<p>BS Computer Science<br />Abbottabad, Pakistan</p>
-											</div>
-										</div>
-									</li>
-								</ul>
-							</div>
 
 					</div>
         		</div>
