--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 9th October, 1998</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +92 3181495344</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> shehroznaveed111@gmail.com</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Haripur Pakistan</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Karachi Pakistan</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -162,7 +162,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>WebDevelpment <span class="counter">95</span>%</h4>
+									<h4>WebDevelpment <span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -204,7 +204,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to till(2021)</p>
+											<p>March 2017 to 2021</p>
 										</div>
 										<div class="media-body">
 											
