--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <!-- Required meta tags -->
+		<meta name="google-site-verification" content="hyCNQi3yvSZGRV9udv0taYPDSDbVePzKvrPrhMBjfQ8" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
