--- a/index.html
+++ b/index.html
@@ -560,6 +560,69 @@
         					</div>
         				</div>
 					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/post 1.jpg" alt="">
+        						<a class="light" href="img/gallery/post 1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Advertisment Design</h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/sample 2 DESIGN.jpg" alt="">
+        						<a class="light" href="img/gallery/sample 2 DESIGN.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Advertisment Design</h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/post 2 design new.jpg" alt="">
+        						<a class="light" href="img/gallery/post 2 design new.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Advertisment Design</h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/POST 4.png" alt="">
+        						<a class="light" href="img/gallery/POST 4.png"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Advertisment Design</h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/post 5 design 1.png" alt="">
+        						<a class="light" href="img/gallery/post 5 design 1.png"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Advertisment Design</h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+					</div>
 					
 
         		</div>
