--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
     <head>
 		<meta name="google-site-verification" content="hyCNQi3yvSZGRV9udv0taYPDSDbVePzKvrPrhMBjfQ8" />
-
+		<meta charset="UTF-8">
+		<meta name="description" content="Graphic Designer, Shehroz Naveed, Web Designer">
+		<meta name="keywords" content="Shehroz Naveed, Graphics Designer, Web Designer">
+		<meta name="author" content="Shehroz Naveed">
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/LOGO/logo_png__with_white_color_jen_icon.ico" type="image/png">
-        <title>Shehroz Naveed || Programer || Graphic Designer || Web Designer</title>
+        <title>Shehroz Naveed || Programer || Graphic Designer || Web Designer || UI/UX Designer</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -586,45 +589,7 @@
         				</div>
 					</div>
 
-					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/post 2 design new.jpg" alt="">
-        						<a class="light" href="img/gallery/post 2 design new.jpg"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>Advertisment Design</h4>
-        						<p>Client Project</p>
-        					</div>
-        				</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/POST 4.png" alt="">
-        						<a class="light" href="img/gallery/POST 4.png"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>Advertisment Design</h4>
-        						<p>Client Project</p>
-        					</div>
-        				</div>
-					</div>
-
-					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/post 5 design 1.png" alt="">
-        						<a class="light" href="img/gallery/post 5 design 1.png"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>Advertisment Design</h4>
-        						<p>Client Project</p>
-        					</div>
-        				</div>
-					</div>
 					
-
         		</div>
         		<div class="more_btn">
         			<a class="main_btn" href="#">Load More Items</a>
