--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         						<a class="light" href="img/gallery/beautysalon_jpg.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Salaon Logo</h4>
+        						<h4>Salon Logo</h4>
         						<p>Client Project</p>
         					</div>
         				</div>
