--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/beautysalon_jpg.jpg" alt="">
-        						<a class="light" href="img/gallery/beautysalon_jpg.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/mockup-1-michal.jpg" alt="">
+        						<a class="light" href="img/gallery/mockup-1-michal.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Salon Logo</h4>
+        						<h4>Construction Logo</h4>
         						<p>Client Project</p>
         					</div>
         				</div>
@@ -355,11 +355,11 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand creative print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/logo2.png" alt="">
-        						<a class="light" href="img/gallery/logo2.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/realbikers_mockup.jpg" alt="">
+        						<a class="light" href="img/gallery/realbikers_mockup.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Food Logo Design</h4>
+        						<h4>Bike company Logo Design</h4>
         						<p>Client Project</p>
         					</div>
         				</div>
@@ -367,8 +367,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/Logo_ILCGraphicsPage.png" alt="">
-        						<a class="light" href="img/gallery/Logo_ILCGraphicsPage.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/realbikers_mockup2.jpg" alt="">
+        						<a class="light" href="img/gallery/realbikers_mockup2.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					
         				</div>
@@ -497,14 +497,15 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/Acadmy_Banner_1.jpg" alt="">
-        						<a class="light" href="img/gallery/Acadmy_Banner_1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/michal-new-sample-with-wp-log.jpg" alt="">
+        						<a class="light" href="img/gallery/michal-new-sample-with-wp-log.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Banner Design</h4>
+        						<h4>Professional Card Design</h4>
         						<p>Client Project</p>
         					</div>
         				</div>
+						
         			</div>	<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -544,12 +545,12 @@
 					</div>	<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/FlayerForATCpic.jpg" alt="">
-        						<a class="light" href="img/gallery/FlayerForATCpic.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/Logo-complete-png.png" alt="">
+        						<a class="light" href="img/gallery/Logo-complete-png.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Flayer Design</h4>
-        						<p>Client Project</p>
+        						<h4>Minimalistic Logo Design</h4>
+        						<p>Logo</p>
         					</div>
         				</div>
 					</div>
