--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
 									<h3>Shehroz Naveed</h3>
-									<h4>UI/UX Developer || Software Develpment || WebDevelpment</h4>
+									<h4>UI/UX Designer || Graphic Designer || Software Developer || WebDeveloper</h4>
 									<p>"I am a Graphic Designer based in Islamabad, Karachi, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards. But that’s just a part of it. Design is my life. It’s my five-star spa. It’s my roller-coaster. It’s something I do before going to bed, and something I can’t wait to do in the mornings. Without it, my world would be black and white.”</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 9th October, 1998</a></li>
