--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         						<a class="light" href="img/gallery/thinktannk_jpg.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Flayer Design</h4>
+        						<h4>Educational Website Logo Design</h4>
         						<p>Client Project</p>
         					</div>
         				</div>
