--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
 		<meta name="google-site-verification" content="hyCNQi3yvSZGRV9udv0taYPDSDbVePzKvrPrhMBjfQ8" />
 		<meta charset="UTF-8">
-		<meta name="description" content="Graphic Designer, Shehroz Naveed, Web Designer">
-		<meta name="keywords" content="Shehroz Naveed, Graphics Designer, Web Designer">
+		<meta name="description" content="Logo maker, Graphic Designer, Shehroz Naveed, Web Designer">
+		<meta name="keywords" content="Shehroz Naveed, Graphics Designer, Logo Designer , UI Designer, Fiverr , Web Designer",>
 		<meta name="author" content="Shehroz Naveed">
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/LOGO/logo_png__with_white_color_jen_icon.ico" type="image/png">
-        <title>Shehroz Naveed || Programer || Graphic Designer || Web Designer || UI/UX Designer</title>
+        <title>Shehroz Naveed || Programer || Graphic Designer || Web Designer || UI/UX Designer || Graphic Designer</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
