--- a/index.html
+++ b/index.html
@@ -254,7 +254,24 @@
         		<div class="main_title">
         			<h2>Offerings to my clients</h2>
         			<p>If you are looking at Graphic Designer on the web, you may be very confused at the difference in price. I can make a any type of design for my client in low bugdet and given time.</p>
-        		</div>
+        </div>
+
+		<div style="display: flex; justify-content: center;">
+			<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget'>
+			  <a itemprop='url' href='https://www.fiverr.com/shehroz_naveed' rel='nofollow' target='_blank'>
+				<div class='fiverr-seller-content' id='fiverr-seller-widget-content-4c8e1b28-180e-498d-837c-de9f1a6f5cf4' itemprop='contentURL' style='display: none;'></div>
+				<div id='fiverr-widget-seller-data' style='display: none;'>
+				  <div itemprop='name'>shehroz_naveed</div>
+				  <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
+				  <div itemprop='jobtitle'>Seller</div>
+				  <div itemprop='description'>I’m an experienced Graphic Designer and UI/UX Designer. I have a strong understanding of how Front end Design integrates with an overall brand and its marketing efforts. I can talk more about my experience and skills that make me a good fit for this job, but mostly I’m just passionate about Design.</div>
+				</div>
+			  </a>
+			</div>
+		  </div>
+		  
+		  <script id='fiverr-seller-widget-script-4c8e1b28-180e-498d-837c-de9f1a6f5cf4' src='https://widgets.fiverr.com/api/v1/seller/shehroz_naveed?widget_id=4c8e1b28-180e-498d-837c-de9f1a6f5cf4' data-config='{"category_name":"\n                                    Graphics \u0026 Design\n\n                            "}' async='true' defer='true'></script>
+		  
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
