--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 		<div style="display: flex; justify-content: center;">
 			<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget'>
 			  <a itemprop='url' href='https://www.fiverr.com/shehroz_naveed' rel='nofollow' target='_blank'>
-				<div class='fiverr-seller-content' id='fiverr-seller-widget-content-4c8e1b28-180e-498d-837c-de9f1a6f5cf4' itemprop='contentURL' style='display: none;'></div>
+				<div class='fiverr-seller-content' id='fiverr-seller-widget-content-4c8e1b28-180e-498d-837c-de9f1a6f5cf4' itemprop='contentURL' style='background-image:url(img/gallery/dp.png);'></div>
 				<div id='fiverr-widget-seller-data' style='display: none;'>
 				  <div itemprop='name'>shehroz_naveed</div>
 				  <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
